--- a/feedback2.html
+++ b/feedback2.html
@@ -14,7 +14,9 @@
 	<option value="Mr.">Mr.</option>
 	<option value="Mrs.">Mrs.</option>
 	<option value="Ms.">Ms.</option>
-	</select> <input type="text" name="name" size="20" required>
+	</select> 
+	<input type="text" name="firstname" size="20" required>
+	<input type="text" name="lastname" size="20" required>
 	</p>
 	
 	<p>Email Address: <input type="email" name="email" size="20" required></p>
