--- a/feedback2.html
+++ b/feedback2.html
@@ -5,7 +5,8 @@
 	<title>Feedback Form</title>
 </head>
 <body>
-<!-- Script 3.1 feedback.html -->
+<!-- Script 3.2 feedback2.html -->
+	
 <div><p>Please complete this form to submit your feedback:</p>
 
 <form action="handle_form.php" method="post">
