--- a/footer.html
+++ b/footer.html
@@ -1,9 +1,20 @@
-		<!-- Script 8.3 - footer.html -->
+<!-- footer.html -->
+
   <!-- END CHANGEABLE CONTENT. -->
   </main>
 
   <footer container class="siteFooter">
     <p>Design uses <a href="http://concisecss.com/">Concise CSS Framework</a></p>
+	<p class="float-right">
+	<?php 
+		// Print the current date and time...
+		// Set the timezone:
+		date_default_timezone_set('US/Arizona');
+		
+		// Now print the date and time:
+		print date ('g:i a l F j');
+	?>
+	</p>
   </footer>
     
 </body>
