--- a/header.html
+++ b/header.html
@@ -1,3 +1,5 @@
+<!-- header.html -->
+
 <!doctype html>
 <html>
 <head>
@@ -5,22 +7,33 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="HandheldFriendly" content="True">
-  <title>Raise High the Roof Beam!</title>
-  <link rel="stylesheet" type="text/css" media="screen" href="css/concise.min.css" />
-  <link rel="stylesheet" type="text/css" media="screen" href="css/masthead.css" />
+  <title>
+	<?php
+	
+		if (defined('TITLE')) {
+			// Is the title defined?
+			print TITLE;
+		}
+		else {
+			// The title is not defined.
+			print 'Welcome to The Company!';
+		}
+	?>
+  </title>
+  <link rel="stylesheet" type="text/css" media="screen" href="css1.css" />
+  <link rel="stylesheet" type="text/css" media="screen" href="css2.css" />
 </head>
 <body>
 
 <header container class="siteHeader">
   <div row>
-    <h1 column=4 class="logo"><a href="index.php">Raise High the Roof Beam!</a></h1>
+    <h1 column=4 class="logo"><a href="index.php">The Company</a></h1>
     <nav column="8" class="nav">
       <ul>
-        <li><a href="books.php">Books</a></li>
-        <li><a href="#">Stories</a></li>
-        <li><a href="#">Quotes</a></li>
-        <li><a href="login.php">Login</a></li>
-        <li><a href="register.php">Register</a></li>
+        <li><a href="main.php">Employee Form</a></li>
+		<li><a href="view.php">View Records</a></li>
+		<li><a href="compare.php">Compare Names</a></li>
+		<li><a href="multiply.php">Multiply Numbers</a></li>
      </ul>
     </nav>
   </div>
@@ -28,4 +41,3 @@
 
   <main container class="siteContent">
   <!-- BEGIN CHANGEABLE CONTENT. -->
-		<!-- Script 8.2 - header.html -->
